@@ -86,10 +86,8 @@
   (defconstant linkage-table-space-end   #x0b000000)
   #!+linux
   (progn
-    (defconstant dynamic-0-space-start #x4f000000)
-    (defconstant dynamic-0-space-end   #x66fff000)
-    (defconstant dynamic-1-space-start #x67000000)
-    (defconstant dynamic-1-space-end   #x7efff000)))
+    (defparameter dynamic-0-space-start #x4f000000)
+    (defparameter dynamic-0-space-end   #x66fff000)))
 
 #!+gencgc
 (!gencgc-space-setup #xF0000000 :dynamic-space-start #x1000000000)
