@@ -107,11 +107,8 @@
   (defconstant static-space-start        #x28000000)
   (defconstant static-space-end          #x2c000000)
 
-  (defconstant dynamic-0-space-start #x30000000)
-  (defconstant dynamic-0-space-end   #x38000000)
-
-  (defconstant dynamic-1-space-start #x40000000)
-  (defconstant dynamic-1-space-end   #x48000000))
+  (defparameter dynamic-0-space-start #x30000000)
+  (defparameter dynamic-0-space-end   #x38000000))
 
 #!+(and sunos cheneygc) ; might as well start by trying the same numbers
 (progn
@@ -124,11 +121,8 @@
   (defconstant static-space-start        #x28000000)
   (defconstant static-space-end          #x2c000000)
 
-  (defconstant dynamic-0-space-start     #x30000000)
-  (defconstant dynamic-0-space-end       #x38000000)
-
-  (defconstant dynamic-1-space-start     #x40000000)
-  (defconstant dynamic-1-space-end       #x48000000))
+  (defparameter dynamic-0-space-start    #x30000000)
+  (defparameter dynamic-0-space-end      #x38000000))
 
 #!+(and netbsd cheneygc) ; Need a gap at 0x4000000 for shared libraries
 (progn
@@ -141,11 +135,8 @@
   (defconstant static-space-start        #x18000000)
   (defconstant static-space-end          #x1c000000)
 
-  (defconstant dynamic-0-space-start     #x48000000)
-  (defconstant dynamic-0-space-end       #x5ffff000)
-
-  (defconstant dynamic-1-space-start     #x60000000)
-  (defconstant dynamic-1-space-end       #x77fff000))
+  (defparameter dynamic-0-space-start    #x48000000)
+  (defparameter dynamic-0-space-end      #x5ffff000))
 
 ;; Size of one linkage-table entry in bytes. See comment in
 ;; src/runtime/sparc-arch.c
