@@ -16,6 +16,7 @@
 #define _GC_PRIVATE_H_
 
 #include "genesis/weak-pointer.h"
+#include "immobile-space.h"
 
 // Gencgc distinguishes between "quick" and "ordinary" requests.
 // Even on cheneygc we need this flag, but it's actually just ignored.
