@@ -2,6 +2,7 @@
 
 changes relative to sbcl-1.4.4:
   * enhancement: FIND-PACKAGE does not acquire a mutex
+  * enhancement: cheneygc can perform heap relocation on startup
 
 changes in sbcl-1.4.4 relative to sbcl-1.4.3:
   * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
